# ai_bot

./: .env.example  Dockerfile  README.md  inference.py  my_env.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
tasks/: easy.json  hard.json  medium.json
